--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -40,3 +40,13 @@
 .gallery__link:hover {
   cursor: zoom-in;
 }
+
+img {
+  width: 100%;
+  display: block;
+  cursor: pointer;
+}
+
+li {
+  list-style: none;
+}
